@@ -310,11 +310,11 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/usrlocalmgi/live/dataload/gensatload/index.html">GENSAT Load</A> <B>(cms)</B>
 <LI><A HREF="/usrlocalmgi/live/dataload/arrayexpload/index.html">ArrayExpress Load</A> <B>(cms)</B>
 <LI><A HREF="/usrlocalmgi/live/dataload/vocload/GOindex.html">GO Vocabulary/DAG Load</A> <B>(hjd)</B>
-<LI><A HREF="/usrlocalmgi/live/dataload/goaload/index.html">GOA/Mouse Load</A> <B>(hjd)</B>
-<LI><A HREF="/usrlocalmgi/live/dataload/goahumanload/index.html">GOA/Human Load</A> <B>(hjd)</B>
-<LI><A HREF="/usrlocalmgi/live/dataload/goratload/index.html">GO/Rat Load</A> <B>(hjd)</B>
-<LI><A HREF="/usrlocalmgi/live/dataload/gorefgenload/index.html">GO/PAINT Load</A> <B>(hjd)</B>
-<LI><A HREF="/usrlocalmgi/live/dataload/gocfpload/index.html">GO/CFP (aka GOC) Load</A> <B>(hjd)</B>
+<LI><A HREF="/usrlocalmgi/live/dataload/goload/goamouse/index.html">GOA/Mouse Load</A> <B>(hjd)</B>
+<LI><A HREF="/usrlocalmgi/live/dataload/goload/goahuman/index.html">GOA/Human Load</A> <B>(hjd)</B>
+<LI><A HREF="/usrlocalmgi/live/dataload/goload/goarat/index.html">GO/Rat Load</A> <B>(hjd)</B>
+<LI><A HREF="/usrlocalmgi/live/dataload/goload/goarefgen/index.html">GO/PAINT Load</A> <B>(hjd)</B>
+<LI><A HREF="/usrlocalmgi/live/dataload/goload/goacfp/index.html">GO/CFP (aka GOC) Load</A> <B>(hjd)</B>
 <LI><A HREF="/usrlocalmgi/live/dataload/homologyload/index.html">Homology Load</A>
 <LI><A HREF="/usrlocalmgi/live/dataload/vocload/MPindex.html">Mammalian Phenotype Vocabulary/DAG Load</A> <B>(csmith)</B>
 <LI><A HREF="/usrlocalmgi/live/dataload/vocload/OMIMindex.html">OMIM Vocabulary Load</A> <B>(smb)</B>
