@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-4-5
+DATE: 06/27/2016
+STAFF: lec
+CHANGES:
+1) fix qcr.html/goload links
+
 TAG: qcreports_db-6-0-4-4
 DATE: 06/06/2016
 STAFF: lec
